# whitenoise-spa

./: .gitignore  README.md  pyproject.toml
whitenoise_spa/: middleware.py
